2002-02-07  Mark McLoughlin  <mark@skynet.ie>

	* distribution.c: (get_distribution_info): fix core. Sorry people.

2002-02-07  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: split deprecation related cflags and gnome_program
	related defines into their own variable.

	* applet.c:
	(panel_applet_clean_gconf): free gconf_key here.
	(panel_applet_clean): don't clean gconf until after the widget has
	been destroyed.
	(applet_destroy): don't free key here.

	* distribution.[ch]: (get_distribution_info): allow distribution menus
	to be re-locatable.

	* gnome-panel-properties.c: (main): set the window icon.

	* gnome-run.c: (register_run_stock_item): impl to register a new stock
	icon and icon set for the run button.
	(show_run_dialog): use above instead of stock execute item. Lookup
	window icon with gnome_program_locate_file.

2002-02-06  Padraig O'Briain  <padraig.obriain@sun.com>

	* panel-applet-frame.[ch]
	Add action signal move-focus_out_of_panel to move focus from applet to
	next or previous object on panel. Currently Tab and Shift+Tab are the 
	keys which do this.

	* foobar-widget.[ch]
	Add action signal focus_panel to support moving focus to the panel

	* panel.c:
	Remove unused argument PanelData specified for panel_event()
	Set focus on panel if button release happens in panel and panel is
	not focus widget.

2002-02-06  Mark McLoughlin  <mark@skynet.ie>

	* gnome-run.c:
	(create_advanced_contents): don't set focus widget here, we do
	it later.
	(update_contents): focus the entry, not the vbox.

Tue Feb 05 17:48:58 2002  George Lebl <jirka@5z.com>

	* gnome-run.c: set window icon

	* menu-util.c: remove the applets sub from the default menu flags

	* menu.c: About box fixups, use a logo, add documentors, fix
	  translation credits, and use the comment for the commie mode
	  paragraph.  Use the standard defaults when adding a menu.
	  When saving a ditem in the timeout, save the error and display